--- a/EliteDangerous-UDP-Dispatcher/EliteDangerous-UDP-Dispatcher.csproj
+++ b/EliteDangerous-UDP-Dispatcher/EliteDangerous-UDP-Dispatcher.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <LangVersion>latest</LangVersion>
+    <RootNamespace>EliteDangerous_UDP_Dispatcher</RootNamespace>
+    <AssemblyName>EliteDangerousUDPDispatcher</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
