--- a/EliteDangerous-UDP-Dispatcher/configuration.json
+++ b/EliteDangerous-UDP-Dispatcher/configuration.json
@@ -1,10 +1,7 @@
 [
   {
-    "$type": "EliteDangerous_UDP_Dispatcher.DispatchedEventReceivers.ConsoleDispatcher, EliteDangerousUDPDispatcher"
-  },
-  {
-    "$type": "EliteDangerous_UDP_Dispatcher.DispatchedEventReceivers.TcpDispatcher, EliteDangerousUDPDispatcher",
+    "$type": "EliteDangerous_UDP_Dispatcher.DispatchedEventReceivers.UdpDispatcher, EliteDangerousUDPDispatcher",
     "RemoteHost": "127.0.0.1",
-    "RemotePort": 58439
+    "RemotePort": 59295
   }
 ]
