--- a/ED.WebServer/ED.WebServer.csproj
+++ b/ED.WebServer/ED.WebServer.csproj
@@ -1,10 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <LangVersion>latest</LangVersion>
-    <RootNamespace>EliteDangerous_UDP_Dispatcher</RootNamespace>
-    <AssemblyName>EliteDangerousUDPDispatcher</AssemblyName>
+    <RootNamespace>ED.WebServer</RootNamespace>
+    <AssemblyName>ED.WebServer</AssemblyName>
+    <Authors>NoLifeKing (Chris Gårdenberg)</Authors>
+    <Company>The Fuel Rats Mischief</Company>
+    <PackageId>ED.Webserver</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
