--- a/ED.WebServer/ED.WebServer.csproj
+++ b/ED.WebServer/ED.WebServer.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>default</LangVersion>
     <RootNamespace>ED.WebServer</RootNamespace>
     <AssemblyName>ED.WebServer</AssemblyName>
     <Authors>NoLifeKing (Chris Gårdenberg)</Authors>
