--- a/ED.UdpListener/ED.UdpListener.csproj
+++ b/ED.UdpListener/ED.UdpListener.csproj
@@ -6,14 +6,15 @@
     <Authors>NoLifeKing (Chris Gårdenberg)</Authors>
     <Company>The Fuel Rats Mischief</Company>
     <LangVersion>default</LangVersion>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="configuration.json" />
+    <None Remove="configuration.example.json" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="configuration.json">
+    <Content Include="configuration.example.json">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
   </ItemGroup>
