Making it so that the Webserver-package creates a nuget-package as well

--- a/ED.WebServer/ED.WebServer.csproj
+++ b/ED.WebServer/ED.WebServer.csproj
@@ -8,6 +8,7 @@
     <Authors>NoLifeKing (Chris Gårdenberg)</Authors>
     <Company>The Fuel Rats Mischief</Company>
     <PackageId>ED.Webserver</PackageId>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
