Derp, broken build config.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,6 @@ jobs:
         name: Restore packages
         command: dotnet Restore
 
-      - run
+      - run:
         name: Build solution
         command: dotnet build -c Release
