--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,5 +6,5 @@ jobs:
     working_directory: ~/EliteDangerous-UDP-Dispatcher
     steps:
       - checkout
-      - run: dotnet Restore
+      - run: dotnet restore
       - run: dotnet build -c Release
