--- a/ED.FullUdpPackage/ED.FullUdpPackage.csproj
+++ b/ED.FullUdpPackage/ED.FullUdpPackage.csproj
@@ -7,7 +7,7 @@
     <Company>The Fuel Rats Mischief</Company>
     <RuntimeIdentifiers>win10-x64;linux-x64;linux-arm;os-x64</RuntimeIdentifiers>
     <RuntimeFrameworkVersion>2.1.1</RuntimeFrameworkVersion>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
