--- a/ED.FullUdpPackage/ED.FullUdpPackage.csproj
+++ b/ED.FullUdpPackage/ED.FullUdpPackage.csproj
@@ -2,16 +2,16 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
     <Authors>NoLifeKing (Chris Gårdenberg)</Authors>
     <Company>The Fuel Rats Mischief</Company>
     <RuntimeIdentifiers>win10-x64;linux-x64;linux-arm;os-x64</RuntimeIdentifiers>
-    <RuntimeFrameworkVersion>2.1.2</RuntimeFrameworkVersion>
+    <!--<RuntimeFrameworkVersion>2.2.3</RuntimeFrameworkVersion>-->
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
   <ItemGroup>
