--- a/ED.UdpListener/ED.UdpListener.csproj
+++ b/ED.UdpListener/ED.UdpListener.csproj
@@ -2,13 +2,13 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
     <Authors>NoLifeKing (Chris Gårdenberg)</Authors>
     <Company>The Fuel Rats Mischief</Company>
     <LangVersion>default</LangVersion>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <RuntimeIdentifiers>win10-x64;linux-x64;linux-arm;os-x64</RuntimeIdentifiers>
-    <RuntimeFrameworkVersion>2.1.2</RuntimeFrameworkVersion>
+    <!--<RuntimeFrameworkVersion>2.2.3</RuntimeFrameworkVersion>-->
   </PropertyGroup>
 
   <ItemGroup>
